# dt_sci-template

./: README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
