[tool.poetry]
name = "{{cookiecutter.directory_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
license = "MIT"
authors = ["{{cookiecutter.author_name}}"]

[tool.poetry.dependencies]
python = "^3.9.1"
pdoc3 = "^0.10.0"
notebook = "^6.4.10"
prefect = "^2.7.6"
scikit-learn = "^1.2.0"
pandas = "^1.5.2"
prefect-jupyter = "^0.2.0"
interrogate = "^1.5.0"
hydra-core = "^1.1.1"
joblib = "^1.2.0"
dagshub = "^0.1.8"
mlflow = "^2.1.1"
bentoml = "^1.0.7"
dvc = "^2.31.0"
duckdb = "^0.6.0"
pyarrow = "^10.0.1"
jupyterlab = "^3.5.0"
duckdb-engine = "^0.6.5"
polars = "^0.15.1"
rise = "^5.7.1"
jupyter-nbextensions-configurator = "^0.6.1"
ipywidgets = "^8.0.3"
seaborn = "^0.12.1"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
	\.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build   
)/ 
'''
